objects/fbm__Mapping__c.object
<CustomObject>
    <fields>
        <fullName>fbm__API_Field_Name__c</fullName>
        <description>Source field name to copy data from</description>
        <label>Source Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overwrite target when source has value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fbm__SObject_Field__c</fullName>
        <description>Field API name of selected target object</description>
        <label>Target Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fbm__SObject_Type__c</fullName>
        <description>Target object to copy data to</description>
        <label>Target Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>FunnelBeam Field Mapping</label>
    <nameField>
        <displayFormat>F-{0000000}</displayFormat>
        <label>FunnelBeam Field Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FunnelBeam Field Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>